# rest-mongodb-rust

./: .env  Cargo.toml  README.md
src/: main.rs
